# GIC-TakeHomeAssignment

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  seed.py
backend/app/: config.py  database.py  dependencies.py  main.py  mediator.py
backend/app/behaviours/: logging_behaviour.py
backend/app/commands/: cafe_commands.py  employee_commands.py
backend/app/handlers/: cafe_handlers.py  employee_handlers.py
backend/app/models/: __init__.py  cafe.py  cafe_employee.py  employee.py
backend/app/repositories/: cafe_repository.py  employee_repository.py  interfaces.py
backend/app/routers/v1/: __init__.py  cafes.py  employees.py
backend/app/schemas/: cafe.py  employee.py
backend/app/services/: cafe_service.py  employee_service.py
backend/app/utils/: exceptions.py  file_handler.py  logger.py  orm.py
backend/tests/: conftest.py
backend/tests/integration/: test_cafes_router.py  test_employees_router.py  test_schemas.py
backend/tests/unit/: test_cafe_service.py  test_employee_service.py
frontend/: .dockerignore  Dockerfile  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: cafes.js  client.js  employees.js
frontend/src/components/: AppLayout.jsx  TextInput.jsx  UnsavedChangesGuard.jsx
frontend/src/hooks/: useCafes.js  useEmployees.js
frontend/src/pages/: CafeFormPage.jsx  CafesPage.jsx  EmployeeFormPage.jsx  EmployeesPage.jsx
