[tool.poetry]
name = "cafe-employee-manager"
version = "0.1.0"
description = "Backend for managing cafe employees and cafes"
package-mode = false
authors = ["Nigel Yeo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
sqlalchemy = "2.0.30"
psycopg2-binary = "2.9.9"
pydantic = ">=2.1"
pydantic-settings = "2.2.1"
python-multipart = "0.0.9"
alembic = "1.13.1"
structlog = "24.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
